# s24632_MTG-Card-Classification

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  data_analysis.ipynb  data_analysis.py  docker-compose.yml  download_bulk_data.py  download_card_images.py  download_types.py  make_metadata_csv.py  pyproject.toml  requirements.txt
.github/workflows/: main_workflow.yml
dags/: 3_download-cloud_clean_standard-normalisate_save.py  3_download-public_split_save.py  4_data_processing.py  4_model_training.py  5_monitoring.py  config.py  dag_download_and_split.py  dag_process_data.py  data_processing_dag.py  model_training_dag.py  monitor_model_dag.py
models/: tpot_best_model.py
reports/: eda_report.md  evaluation_report.txt  tpot_report.md
scripts/: automl_model_selection.py  data_analysis.py  download_bulk_data.py  download_card_images.py  download_types.py  make_metadata_csv.py  model_prototype.py
tests/: test_model_and_pipeline.py
