[tool.poetry]
name = "airflow_project"
version = "0.1.0"
description = "Projekt Airflow z użyciem Poetry"
authors = ["a"]


[tool.poetry.dependencies]
python = ">=3.10,<3.11"
requests = "^2.32.3"
ijson = "^3.3.0"
tqdm = "^4.67.0"
pillow = "^11.0.0"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
python-dotenv = "^1.0.1"
tpot = "^0.12.2"
gspread = "^6.1.4"
oauth2client = "^4.1.3"
numpy = "^2.2.1"
joblib = "^1.4.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
